--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,46 @@
-ul {
+body {
+  font-family: Roboto;
+  background-color: white;
+}
+/* ------ logo top ------ */
+.logo-top {
+  color: #2196f3;
+  font-family: "Raleway";
+  font-style: normal;
+  position: absolute;
+  width: 145px;
+  height: 31px;
+  left: 215px;
+  top: 24px;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 31px;
+  letter-spacing: 0.03em;
+  text-decoration: none;
+}
+/* ------ hover navigation top ------ */
+.nav-1:hover,
+.nav-1:focus,
+.nav-2:hover,
+.nav-2:focus,
+.nav-3:hover,
+.nav-3:focus {
+  color: #2196f3;
+}
+.navigation {
+  font-weight: 500;
   list-style-type: none;
 }
-.nav-1 {
+.nav-1,
+.nav-2,
+.nav-3 {
   text-decoration: none;
+  color: #212121;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+}
+.nav-1 {
   position: absolute;
   width: 45px;
   height: 16px;
@@ -10,7 +48,6 @@ ul {
   top: 32px;
 }
 .nav-2 {
-  text-decoration: none;
   position: absolute;
   width: 72px;
   height: 16px;
@@ -18,34 +55,60 @@ ul {
   top: 32px;
 }
 .nav-3 {
-  text-decoration: none;
   position: absolute;
   width: 64px;
   height: 16px;
   left: 670px;
   top: 32px;
 }
+/* ------ hover contact top ------ */
+.head-address-1:hover,
+.head-address-1:focus,
+.head-address-2:hover,
+.head-address-2:focus {
+  color: #2196f3;
+}
+/* ------ Contact top ------ */
+.contact-top {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+  list-style-type: none;
+}
 .head-address-1 {
+  color: #757575;
   text-decoration: none;
   position: absolute;
   width: 135px;
   height: 16px;
   left: 1078px;
   top: 32px;
+  list-style-type: none;
 }
 .head-address-2 {
+  color: #757575;
   text-decoration: none;
   position: absolute;
   width: 122px;
   height: 16px;
   left: 1263px;
   top: 32px;
+  list-style-type: none;
 }
-.link {
-  color: #212121;
-  cursor: pointer;
-}
-button {
+/* ------ Filter ------ */
+.filter-all {
+  position: absolute;
+  width: 121px;
+  height: 38px;
+  left: 510px;
+  top: 174px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 26px;
   border-radius: 4px;
   border: 0;
   background: #f5f4fa;
@@ -55,52 +118,133 @@ button {
   cursor: pointer;
   font-weight: 500;
   letter-spacing: 0.03em;
+  list-style-type: none;
 }
-.filtr-button-1 {
+.filter-pages {
   position: absolute;
-  width: 73px;
+  width: 93px;
   height: 38px;
-  left: 512px;
+  left: 639px;
   top: 174px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 26px;
+  border-radius: 4px;
+  border: 0;
+  background: #f5f4fa;
+  color: #212121;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  cursor: pointer;
+  font-weight: 500;
+  letter-spacing: 0.03em;
+  list-style-type: none;
 }
-.filtr-button-2 {
+.filter-app {
   position: absolute;
-  width: 125px;
+  width: 114px;
   height: 38px;
-  left: 593px;
+  left: 740px;
   top: 174px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 26px;
+  border-radius: 4px;
+  border: 0;
+  background: #f5f4fa;
+  color: #212121;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  cursor: pointer;
+  font-weight: 500;
+  letter-spacing: 0.03em;
+  list-style-type: none;
 }
-.filtr-button-3 {
+.filter-design {
+  text-decoration: none;
   position: absolute;
-  width: 112px;
+  width: 91px;
   height: 38px;
-  left: 726px;
+  left: 862px;
   top: 174px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 26px;
+  border-radius: 4px;
+  border: 0;
+  background: #f5f4fa;
+  color: #212121;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  cursor: pointer;
+  font-weight: 500;
+  letter-spacing: 0.03em;
+  list-style-type: none;
 }
-.filtr-button-4 {
+.filter-marketing {
+  text-decoration: none;
   position: absolute;
-  width: 103px;
+  width: 121px;
   height: 38px;
-  left: 846px;
+  left: 961px;
   top: 174px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 26px;
+  border-radius: 4px;
+  border: 0;
+  background: #f5f4fa;
+  color: #212121;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  cursor: pointer;
+  font-weight: 500;
+  letter-spacing: 0.03em;
+  list-style-type: none;
 }
-.filtr-button-5 {
-  position: absolute;
-  width: 130px;
-  height: 38px;
-  left: 957px;
-  top: 174px;
-}
-.filter {
-  text-align: center;
-}
-button:hover {
+/* ------ Hover Filter ------ */
+.filter-all:hover,
+.filter-all:focus {
+  text-decoration: none;
   background: #2196f3;
   color: white;
 }
-body {
-  font-family: Roboto;
-  background-color: #e5e5e5;
+.filter-pages:hover,
+.filter-pages:focus {
+  text-decoration: none;
+  background: #2196f3;
+  color: white;
+}
+.filter-app:hover,
+.filter-app:focus {
+  text-decoration: none;
+  background: #2196f3;
+  color: white;
+}
+.filter-design:hover,
+.filter-design:focus {
+  text-decoration: none;
+  background: #2196f3;
+  color: white;
+}
+.filter-marketing:hover,
+.filter-marketing:focus {
+  text-decoration: none;
+  background: #2196f3;
+  color: white;
+}
+/* ------ Boxes ------ */
+.boxes {
+  text-decoration: none;
+  list-style-type: none;
 }
 .box-1 {
   box-sizing: border-box;
@@ -189,65 +333,65 @@ body {
   height: 404px;
   left: 1015px;
   top: 1130px;
-
   background: #ffffff;
   border: 1px solid #eeeeee;
 }
-h3 {
+.h3-styles {
+  font-weight: 700;
   font-size: 18px;
-  font-weight: 700;
+  line-height: 36px;
   letter-spacing: 0.06em;
+  color: #212121;
 }
-p {
+.p-styles {
   font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.03em;
   color: #757575;
-  letter-spacing: 0.03em;
 }
-
-.logo-top {
-  position: absolute;
-  width: 145px;
-  height: 31px;
-  left: 215px;
-  top: 24px;
-  color: #2196f3;
-  font-family: Raleway;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 31px;
-  letter-spacing: 0.03em;
-  text-decoration: none;
-}
-.footer-logo {
-  position: absolute;
-  width: 145px;
-  height: 31px;
-  left: 215px;
-  top: 1688px;
-  color: #2196f3;
-  font-family: Raleway;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 31px;
-  letter-spacing: 0.03em;
-  text-decoration: none;
-}
-address {
-  font-style: normal;
-}
-.footer-address {
-  color: white;
-  text-decoration: none;
-}
-.footer-contact {
-  color: #ffffff99;
-  text-decoration: none;
-}
-footer {
+/* ------ Footer ------ */
+.footer {
   position: absolute;
   width: 1600px;
   height: 252px;
   left: 0px;
   top: 1628px;
   background: #2f303a;
+}
+.contact-bottom {
+  font-family: "Roboto";
+  font-style: normal;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  list-style-type: none;
+}
+.footer-address {
+  color: #ffffff;
+  text-decoration: none;
+}
+.footer-email {
+  color: rgba(255, 255, 255, 0.6);
+  text-decoration: underline;
+}
+.footer-contact {
+  color: rgba(255, 255, 255, 0.6);
+  text-decoration: none;
+}
+.footer-logo {
+  color: #2196f3;
+  font-family: Raleway;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 31px;
+  letter-spacing: 0.03em;
+  text-decoration: none;
+}
+.footer-address:hover,
+.footer-contact:hover,
+.footer-email:hover,
+.footer-address:focus,
+.footer-contact:focus,
+.footer-email:focus {
+  color: #2196f3;
 }
