--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ body {
   text-decoration: none;
   color: var(--main-text-color);
   font-size: 14px;
-  line-height: 0.61;
+  line-height: 1.14;
   letter-spacing: 0.02em;
 }
 /* ------ logo top ------ */
@@ -77,7 +77,7 @@ body {
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
-  line-height: 0.61;
+  line-height: 1, 14;
   letter-spacing: 0.02em;
   list-style-type: none;
   color: var(--owner-text-color);
@@ -90,7 +90,7 @@ body {
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
-  line-height: 1;
+  line-height: 1.62;
   border-radius: 4px;
   border: 0;
   background: #f5f4fa;
@@ -119,13 +119,13 @@ body {
 .h3-styles {
   font-weight: 700;
   font-size: 18px;
-  line-height: 1.38;
+  line-height: 2;
   letter-spacing: 0.06em;
   color: var(--main-text-color);
 }
 .p-styles {
   font-size: 16px;
-  line-height: 1.15;
+  line-height: 1.87;
   letter-spacing: 0.03em;
   color: #757575;
 }
@@ -137,7 +137,7 @@ body {
   font-family: "Roboto";
   font-style: normal;
   font-size: 14px;
-  line-height: 0.92;
+  line-height: 1.71;
   letter-spacing: 0.03em;
   list-style-type: none;
 }
@@ -195,9 +195,22 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
 }
+.description {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
 .no-decoration {
   text-decoration: none;
   list-style-type: none;
+}
+.no-decoration h3 {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
 .teams-h3 {
   font-weight: 500;
