--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,9 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
 }
+.current {
+  color: var(--acent-color);
+}
 /* ------ logo top ------ */
 .logo-top {
   color: var(--acent-color);
@@ -93,8 +96,7 @@ body {
   line-height: 1.62;
   border-radius: 4px;
   border: 0;
-  background: #f5f4fa;
-  color: var(--main-text-color);
+  background: var(--buttons-port-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   cursor: pointer;
@@ -106,14 +108,14 @@ body {
 .filter-buttom:hover,
 .filter-buttom:focus {
   background: var(--acent-color);
-  color: white;
+  color: var(--buttons-port-color);
 }
 /* ------ Boxes ------ */
 .boxes {
   text-decoration: none;
   list-style-type: none;
   box-sizing: border-box;
-  background: #ffffff;
+  background: var(--buttons-port-color);
   border: 1px solid #eeeeee;
 }
 .h3-styles {
@@ -147,7 +149,7 @@ body {
 }
 .footer-email {
   color: rgba(255, 255, 255, 0.6);
-  text-decoration: underline;
+  text-decoration: none;
 }
 .footer-contact {
   color: rgba(255, 255, 255, 0.6);
@@ -187,6 +189,22 @@ body {
   letter-spacing: 0.06em;
   text-transform: uppercase;
 }
+.order-buttom {
+  background-color: var(--acent-color);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  border-radius: 4px;
+  border: 0;
+  letter-spacing: 0.06em;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  cursor: pointer;
+  color: var(--buttons-port-color);
+}
 .h2-styles {
   color: var(--main-text-color);
   font-weight: 700;
@@ -222,4 +240,7 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 0.73;
+}
+.teams-background {
+  background-color: #f5f5f5;
 }
