--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,6 @@ body {
 }
 /* ------ Filter ------ */
 .filter-buttom {
-  text-decoration: none;
   font-family: "Roboto";
   font-style: normal;
   font-weight: 500;
@@ -100,7 +99,6 @@ body {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   cursor: pointer;
-  font-weight: 500;
   letter-spacing: 0.03em;
   list-style-type: none;
 }
@@ -115,8 +113,6 @@ body {
   text-decoration: none;
   list-style-type: none;
   box-sizing: border-box;
-  background: var(--buttons-port-color);
-  border: 1px solid #eeeeee;
 }
 .h3-styles {
   font-weight: 700;
@@ -190,6 +186,7 @@ body {
   text-transform: uppercase;
 }
 .order-buttom {
+  font-family: Roboto;
   background-color: var(--acent-color);
   font-weight: 700;
   font-size: 16px;
@@ -205,6 +202,12 @@ body {
   cursor: pointer;
   color: var(--buttons-port-color);
 }
+.lorem {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+}
 .h2-styles {
   color: var(--main-text-color);
   font-weight: 700;
@@ -214,6 +217,7 @@ body {
   letter-spacing: 0.03em;
 }
 .description {
+  color: var(--owner-text-color);
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
@@ -223,23 +227,17 @@ body {
   text-decoration: none;
   list-style-type: none;
 }
-.no-decoration h3 {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-}
-.teams-h3 {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 0.73;
-}
 .teams-p {
   color: var(--owner-text-color);
   font-weight: 400;
   font-size: 16px;
-  line-height: 0.73;
+  line-height: 1.18;
+}
+.teams {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+  letter-spacing: 0.03em;
 }
 .teams-background {
   background-color: #f5f5f5;
